# plover

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  conftest.py  counter.core  fusesoc.conf  pyproject.toml
.github/workflows/: ci.yml
dv/: README.md  __init__.py  axi_lite_agent.py  axi_stream_agent.py  dsp_models.py  dsp_plot.py  fm_synthesis.py  test_counter_pytest.py  test_models_fm_demod_chain.py  test_models_fm_roundtrip.py
dv/axil_shell/: axil_env.py
dv/counter/: counter_test.py
plover/dv/: test_plover.py
plover/syn/constraints/: plover.sdc
rdl/: rdl_gen.py
rtl/counter/: counter.sv
tools/: README.md  dv_harness.py  gen_regs.py  rdl_gen.py  version_gen.py
top/: plover.core
top/dv/: firmware_bridge.py  plover_env.py  plover_test.py  test_plover.py  test_plover_pytest.py
top/host/: Makefile  README.md  plover_hello.c  plover_hello.cc  plover_hello.h
top/rtl/: plover.sv
top/syn/: README.md
top/syn/scripts/: build.sh
units/agc/: agc.core
units/agc/dv/: test_agc.py  test_agc_pytest.py
units/agc/rtl/: agc.sv
units/audio_decimator/: audio_decimator.core
units/audio_decimator/dv/: test_audio_decimator.py  test_audio_decimator_pytest.py
units/audio_decimator/rtl/: audio_decimator.sv
units/axil_shell/: axil_shell.core
units/axil_shell/dv/: axil_agent.py  axil_env.py  axil_test.py  test_axil_shell.py  test_axil_shell_pytest.py
units/axil_shell/rdl/: axil_shell.rdl  gen_regs.py  rdl_gen.py
units/axil_shell/rtl/: axil_shell.sv
units/axil_xbar/: axil_xbar.core
units/axil_xbar/dv/: axil_ram_stub.sv  axil_xbar_dv_top.sv  axil_xbar_env.py  axil_xbar_test.py  test_axil_xbar.py  test_axil_xbar_pytest.py
units/axil_xbar/rtl/: axil_skid_buffer.sv  axil_xbar.sv
units/channel_decimator/: channel_decimator.core
units/channel_decimator/dv/: test_channel_decimator.py  test_channel_decimator_pytest.py
units/channel_decimator/rtl/: channel_decimator.sv
units/cic_decimator/: cic_decimator.core
units/cic_decimator/dv/: test_cic_decimator.py  test_cic_decimator_pytest.py
units/cic_decimator/rtl/: cic_decimator.sv
units/cic_interpolator/: cic_interpolator.core
units/cic_interpolator/dv/: test_cic_interpolator.py  test_cic_interpolator_pytest.py
units/cic_interpolator/rtl/: cic_interpolator.sv
units/complex_mixer/: complex_mixer.core
units/complex_mixer/dv/: test_complex_mixer.py  test_complex_mixer_pytest.py
units/complex_mixer/rtl/: complex_mixer.sv
units/cordic/: cordic.core
units/cordic/dv/: test_cordic.py  test_cordic_pytest.py
units/cordic/rtl/: cordic.sv
units/counter/: counter.core
units/counter/dv/: counter_agent.py  counter_env.py  counter_test.py  test_counter.py  test_counter_pytest.py
units/dc_blocker/: dc_blocker.core
units/dc_blocker/dv/: test_dc_blocker.py  test_dc_blocker_pytest.py
units/dc_blocker/rtl/: dc_blocker.sv
units/deemphasis/: deemphasis.core
units/deemphasis/dv/: test_deemphasis.py  test_deemphasis_pytest.py
units/deemphasis/rtl/: deemphasis.sv
units/fir_filter/: fir_filter.core
units/fir_filter/dv/: test_fir_filter.py  test_fir_filter_pytest.py
units/fir_filter/rtl/: fir_filter.sv
units/fm_demod/: fm_demod.core
units/fm_demod/dv/: test_fm_demod.py  test_fm_demod_pytest.py
units/fm_demod/rtl/: fm_demod.sv
units/nco/: nco.core
units/nco/dv/: test_nco.py  test_nco[W16_P32_L10-startup].result.xml  test_nco_pytest.py
units/nco/rtl/: nco.sv
units/phase_diff/: phase_diff.core
units/phase_diff/dv/: test_phase_diff.py  test_phase_diff_pytest.py
units/phase_diff/rtl/: phase_diff.sv
units/stream_sink/: stream_sink.core
units/stream_sink/dv/: stream_sink_env.py  stream_sink_test.py  test_stream_sink.py  test_stream_sink_pytest.py
units/stream_sink/rtl/: stream_sink.sv
units/syscon/: syscon.core
units/syscon/dv/: syscon_agent.py  syscon_env.py  syscon_test.py  test_syscon.py  test_syscon_pytest.py
units/syscon/rdl/: gen_version.py  syscon.rdl
units/syscon/rtl/: syscon.sv
