[project]
name = "plover"
version = "0.1.0"
description = "AXI4-Lite shell + design-verification environment (cocotb + Verilator + pyuvm, FuseSoC + pytest, SystemRDL)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }

# Runtime/verification dependencies. Versions are lower bounds verified against;
# exact resolved versions are pinned in uv.lock. The Verilator pip wheel ships a
# recent release binary, avoiding the VPI-API mismatch between cocotb 2.x and
# older system Verilator packages.
dependencies = [
    "cocotb>=2.0.1",
    "cocotb-bus>=0.2.1",
    "cocotbext-axi>=0.1.28",
    "pyuvm>=4.0.1",
    "fusesoc>=2.4.6",
    "pyyaml>=6.0",
    "verilator==5.48.0",
    # SystemRDL register tooling (used by the FuseSoC generator rdl/rdl_gen.py).
    "systemrdl-compiler>=1.32",
    "peakrdl>=1.5",
    "peakrdl-html>=2.12",
    "peakrdl-cheader>=1.1",
    # The verification base library (OpenTitan dv_lib port). Distribution name is
    # pyuvm-dv-lib; the import package is dv_lib. Source pinned below.
    "pyuvm-dv-lib",
]

# Test-only dependencies. Synced by default with `uv sync`; skip with --no-dev.
[dependency-groups]
dev = [
    "pytest>=8.0",
    # DSP test plots (HDL vs Python-model comparison images written under
    # build/dsp_plots/ at the end of each DSP testcase). Not required for
    # the test logic itself — if matplotlib is unavailable, plotting is
    # silently skipped and tests still pass/fail on their bit-exact
    # comparisons.
    "matplotlib>=3.7",
]

# dv_lib is not on PyPI — pull it from the upstream repo. Pin to a tag/commit
# here once the upstream API settles, e.g. add `, tag = "v1.0.0"`.
[tool.uv.sources]
pyuvm-dv-lib = { git = "https://github.com/tm-treehouse/pyuvm-dv-lib" }

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Three classes of test file:
#   * test_*_pytest.py under units/ and top/ — FuseSoC + cocotb harness
#     entry points (RTL tests). Run a simulator, slow.
#   * test_models_*.py under dv/ — pure-Python model-only tests. No
#     simulator, fast (sub-second each).
#   * test_*.py inside units/*/dv/ and top/dv/ — cocotb modules that
#     run *inside* the simulator. These import cocotb's runtime and
#     would error if collected at the top level, so they're excluded
#     by the python_files patterns below (neither pattern matches
#     plain test_*.py).
testpaths = ["units", "top", "dv"]
python_files = ["test_*_pytest.py", "test_models_*.py"]
addopts = "-ra"
markers = [
    "slow: tests that build RTL and run a full simulation",
]

[tool.setuptools]
# This is a verification project, not a distributable package; no packages to
# install. Present so the project table is valid for tooling.
py-modules = []
